--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.116.2
 fonttools==4.60.1
+fpdf==1.7.2
 greenlet==3.2.4
 h11==0.16.0
 httptools==0.6.4
